--- a/src/assets/template/css/main.scss
+++ b/src/assets/template/css/main.scss
@@ -4,6 +4,7 @@
 @import 'skeleton/skeleton';
 /*@import 'materialize/sass/materialize';*/
 @import 'modules/variables';
+@import 'modules/mediahelp';
 //@import 'sprites/sprite-ann';
 @import 'sprites/sprite';
 @import 'modules/common';
@@ -11,3 +12,5 @@
 @import 'modules/agent';
 @import 'modules/gruz200';
 @import 'modules/price';
+@import 'modules/contacts';
+@import 'modules/about';
