--- a/src/assets/template/html/agent.html
+++ b/src/assets/template/html/agent.html
@@ -1,6 +1,6 @@
 //= include/header.html
 
-	<div class="single-page">
+	<div class="single-page single-page--agent">
 		<div class="container">
 			<div class="single-page__grid">
 				<div class="single-page__content stext">
@@ -156,7 +156,7 @@
                                 С помощью данного сервиса после заполнения всех полей к Вам на указанный адрес приедет ритуальный агент городской специализированной службы "МФЦ-Ритуал"
                             </div>
                             <div class="agent-form__inputs">
-                                <div class="agent-form__input-item">
+                                <div class="agent-form__input-item error">
                                     <input type="text" name="name" placeholder="Ваше имя">
                                 </div>
                                 <div class="agent-form__input-item">
