--- a/src/assets/template/html/include/header.html
+++ b/src/assets/template/html/include/header.html
@@ -187,11 +187,11 @@
 								</div>
 							</li>
 							<li class="header-menu__item">
-								<a href="#"><span>Стоимость</span></a>
+								<a href="/price.html#"><span>Цены</span></a>
 								<div class="header-submenu">
 									<ul>
-										<li><a href="#">Стоимость похорон</a></li>
-										<li><a href="#">Стоимость кремации</a></li>
+										<li><a href="/price.html#funeral">Стоимость похорон</a></li>
+										<li><a href="/price.html#cremation">Стоимость кремации</a></li>
 									</ul>
 								</div>
 							</li>
