--- a/src/assets/template/css/modules/_mainpage.scss
+++ b/src/assets/template/css/modules/_mainpage.scss
@@ -1441,6 +1441,7 @@
   border-radius: 14px;
   overflow: hidden;
   font-size: 0;
+  max-width: 555px;
   &__link{
     position: absolute;
     top: 0;
