носильльщики гроба, каталог, если умер человек, отзывы, вышестоящая организация, новости

--- a/src/assets/template/css/main.scss
+++ b/src/assets/template/css/main.scss
@@ -14,3 +14,9 @@
 @import 'modules/price';
 @import 'modules/contacts';
 @import 'modules/about';
+@import 'modules/reviews';
+@import 'modules/people-die';
+@import 'modules/news';
+@import 'modules/gbu';
+@import 'modules/nosilshchiki-groba';
+@import 'modules/catalog';
