--- a/src/assets/template/css/main.scss
+++ b/src/assets/template/css/main.scss
@@ -21,3 +21,8 @@
 @import 'modules/nosilshchiki-groba';
 @import 'modules/catalog';
 @import 'modules/product';
+@import 'modules/info';
+@import 'modules/articles';
+@import 'modules/regions';
+@import 'modules/morgues';
+@import 'modules/region-one';
