--- a/src/assets/template/html/morgues.html
+++ b/src/assets/template/html/morgues.html
@@ -242,6 +242,7 @@
             </div>
 
             <div class="morgues-text stext">
+                <p class="bold">Кто занимается перевозкой тел в морг?</p>
                 <h3>Перевозка тела в морг, кто этим занимается?</h3>
                 <p>В Москве, тела тех, кто умер дома, перевозят в морг городским спецтранспортом. Если умерший обслуживался в московской поликлинике, это бесплатно.</p>
                 <p class="bold">Городская ритуальная служба МФЦ-Ритуал бесплатно перевозит умершего дома в Москве в морги:​</p>
