корректировка отступа на страниц

--- a/src/assets/template/html/region-one.html
+++ b/src/assets/template/html/region-one.html
@@ -1,6 +1,6 @@
 //= include/header.html
 
-	<div class="single-page single-page--agent">
+	<div class="single-page single4-page--agent">
 		<div class="container">
 			<div class="single-page__grid">
 				<div class="single-page__content stext">
